--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,10 @@
     --light-text-color: whitesmoke;
 }
 
+.login-button {
+    display: none;
+}
+
 .modal {
     display: none;
     /* Hidden by default */
@@ -45,12 +49,12 @@
 .login-modal-content {
     background-repeat: repeat;
     background-image: url("/images/id.png");
-    margin: 15% auto;
+    margin: 5% auto;
+    margin-top: 1%;
     /* 15% from the top and centered */
     padding: 0.15in;
-    border: 1px solid #888;
+    border: 2px solid #888;
     width: 4.8in;
-    /* Could be more or less, depending on screen size */
 }
 
 .modal-close:hover,
@@ -221,13 +225,35 @@ main {
         height: 30vw;
     }
 
-    .shoutbox-messages {
-        height: 90%;
-        border: 1px solid #888;
+    .shoutbox-username {
+        color: whitesmoke;
     }
 
-    .shoutbox-ui {
+    .shoutbox-messages {
+        height: 90%;
+        border: 2px solid #888;
+        overflow-y: auto;
+
+        ul {
+            margin: 0;
+            padding: 0 2% 2% 0;
+        }
+    }
+
+    .shoutbox-message {
         display: flex;
+        border-bottom: 2px dotted #888;
+        text-align: left;
+        line-height: 1.3;
+
+        p {
+            margin: 0;
+        }
+    }
+
+
+    .shoutbox-ui {
+        display: none;
         height: 10%;
         flex-direction: row;
     }
@@ -236,7 +262,7 @@ main {
         width: 80%;
         background: rgba(255, 255, 255, 0.1);
         color: whitesmoke;
-        border: 1px solid #888;
+        border: 2px solid #888;
     }
 
     .shoutbox-send {
