--- a/templates/base.html
+++ b/templates/base.html
@@ -7,112 +7,180 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/fonts/stylesheet.css" rel="stylesheet">
     <script type="module" defer>
-        function do_login(){
-            let login_buttons = document.getElementsByClassName('login-button');
-            for (let i = 0; i < login_buttons.length; ++i) {
-                let item = login_buttons[i];  
-                item.style.display= 'none';
-            }
-            let shoutbox_ui = document.getElementById('shoutbox-ui');
-            shoutbox_ui.style.display='flex';
-            let modal = document.getElementById('login-modal');
-            modal.style.display="none"
-        }
-        function do_logout(){
-            localStorage.removeItem("token");
-            let login_buttons = document.getElementsByClassName('login-button');
-            for (let i = 0; i < login_buttons.length; ++i) {
-                let item = login_buttons[i];  
-                item.style.display= 'block';
-            }
-            let shoutbox_ui = document.getElementById('shoutbox-ui');
-            shoutbox_ui.style.display='none';
-        }
- 
-        import {get_splash,verify_token} from '/js/api.js';
+        import {get_splash, verify_token} from '/js/api.js';
         document.title = await get_splash();
-        localStorage.setItem("logged_in",false);
-        const maybe_token = localStorage.getItem("token");
-        if(maybe_token && maybe_token.length == 32){
-            const result = await verify_token(maybe_token);
-            if ("is_valid" in result){
+
+        function do_login() {
+            let login_buttons = document.getElementsByClassName('login-button');
+            for (let i = 0; i < login_buttons.length; ++i) {
+                let item = login_buttons[i];
+                item.style.display = 'none';
+            }
+            let shoutbox_ui = document.getElementById('shoutbox-ui');
+            shoutbox_ui.style.display = 'flex';
+            let login_modal = document.getElementById('login-modal');
+            login_modal.style.display = "none"
+            let token_login_modal = document.getElementById('token-login-modal');
+            token_login_modal.style.display = "none"
+        }
+
+        function do_logout() {
+            let login_buttons = document.getElementsByClassName('login-button');
+            for (let i = 0; i < login_buttons.length; ++i) {
+                let item = login_buttons[i];
+                item.style.display = 'block';
+            }
+            let shoutbox_ui = document.getElementById('shoutbox-ui');
+            shoutbox_ui.style.display = 'none';
+        }
+
+        async function try_login(token) {
+            localStorage.setItem("logged_in", false);
+            const result = await verify_token(token);
+            if ("is_valid" in result) {
                 let logged_in = result["is_valid"];
-                localStorage.setItem("logged_in",logged_in);
-                if(logged_in==true){
+                localStorage.setItem("logged_in", logged_in);
+                if (logged_in == true) {
+                    localStorage.setItem("token", token.trim());
                     do_login();
-                }else{
+                    return true;
+                } else {
                     do_logout();
+                    return false;
                 }
             }
-        }else{
-            do_logout();
+
+
         }
 
+        const maybe_token = localStorage.getItem("token");
+        if (maybe_token && maybe_token.length == 32) {
+            try_login(maybe_token);
+        } else {do_logout();}
+
         import {bind_button_to_close_modal, bind_button_to_open_modal} from '/js/modal.js';
-        let modal = document.getElementById('login-modal');
-        let close_button = document.getElementById('modal-close-button');
+        let login_modal = document.getElementById('login-modal');
+        let login_close_button = document.getElementById('modal-close-button');
 
         let login_buttons = document.getElementsByClassName('login-button');
-            for (let i = 0; i < login_buttons.length; ++i) {
-                let item = login_buttons[i];  
-                bind_button_to_open_modal(item,modal);
+        for (let i = 0; i < login_buttons.length; ++i) {
+            let item = login_buttons[i];
+            bind_button_to_open_modal(item, login_modal);
+        }
+
+        bind_button_to_close_modal(login_close_button, login_modal);
+
+        let token_login_modal = document.getElementById('token-login-modal');
+        let token_login_close_button = document.getElementById('token-login-modal-close-button');
+
+        bind_button_to_close_modal(token_login_close_button, token_login_modal);
+
+        let confirmation_modal = document.getElementById('confirmation-modal');
+        let confirmation_modal_close_button = document.getElementById('confirmation-modal-close-button');
+
+        bind_button_to_close_modal(confirmation_modal_close_button, confirmation_modal);
+
+
+        let token_login_button = document.getElementById('token-login-button');
+
+        token_login_button.onclick = async function () {
+            let token_login_input = document.getElementById('token-login-token');
+            let token = token_login_input.value.trim();
+            let logged_in = await try_login(token);
+            if (logged_in) {
+                let confirmation_modal = document.getElementById('confirmation-modal');
+                let confirmation_message = document.getElementById('confirmation-message');
+                confirmation_modal.style.display = "block";
+                confirmation_message.innerHTML = `<p>you're logged in! the site will remember your login on this device until you clear your cookies or if you are accessing it in a private browser window.</p>`;
             }
 
-        bind_button_to_close_modal(close_button,modal);
+        }
 
 
         import {register_display_name} from '/js/api.js';
 
-       let login_submit_button = document.getElementById('login-submit');
-        login_submit_button.onclick = async function(){
+        let login_submit_button = document.getElementById('login-submit');
+        login_submit_button.onclick = async function () {
             let display_name_input = document.getElementById('display-name-input');
-            const result = await register_display_name(display_name_input.value);
-            if("error" in result){
-                console.log(JSON.stringify(result));
-            }else if("token" in result){
-                localStorage.setItem("token",result["token"]);
-                localStorage.setItem("logged_in",true);
-                do_login();
+            let message_area = document.getElementById('login-messages');
+            let display_name_trimmed = display_name_input.value.trim();
+            const result = await register_display_name(display_name_trimmed);
+            if ("error" in result) {
+                let error = result["error"];
+                if (error === "NAME_TAKEN") {
+                    let modal = document.getElementById('login-modal');
+                    modal.style.display = "none"
+                    let token_login_modal = document.getElementById('token-login-modal');
+
+                    let token_login_name = document.getElementById('token-login-name');
+                    token_login_name.innerHTML = display_name_trimmed;
+                    token_login_modal.style.display = "block";
+                } else {
+                    message_area.innerHTML = error;
+                    console.log(JSON.stringify(result));
+                }
+            } else if ("token" in result) {
+                let token = result["token"].trim();
+                let logged_in = await try_login(token);
+                if (logged_in) {
+                    let confirmation_modal = document.getElementById('confirmation-modal');
+                    let confirmation_message = document.getElementById('confirmation-message');
+                    confirmation_modal.style.display = "block";
+                    confirmation_message.innerHTML = `<p>you're logged in! the site will remember your login on this device until you clear your cookies or if you are accessing it in a private browser window.
+                if you would like to sign in with this name on another device or otherwise need to sign back in you will need the following token. think of it like a password and keep it somewhere safe. if you do lose it though just ask me for help
+                </p><b>${token}</b>`;
+                }
             }
         };
- 
-        import {get_shouts,post_shout,subscribe_shouts} from '/js/api.js';
+
+        import {get_shouts, post_shout, subscribe_shouts} from '/js/api.js';
         import {generate_shout_html} from '/js/snippets.js';
         let shouts = await get_shouts(null);
         let messages = document.getElementById("shoutbox-messages");
-        if("shouts" in shouts){
+        if ("shouts" in shouts) {
             let shouts_array = shouts["shouts"];
+            let scrollArea = document.getElementById("shoutbox-scroll");
             for (let i = 0; i < shouts_array.length; ++i) {
                 let item = shouts_array[i];
                 console.log(item);
                 let html = generate_shout_html(item);
-                messages.innerHTML +=html;
+                messages.innerHTML += html;
             }
+            scrollArea.scrollTop = scrollArea.scrollHeight;
         }
-       let shout_send_button = document.getElementById("shoutbox-send");
-        shout_send_button.onclick = async function(){
+        let shout_send_button = document.getElementById("shoutbox-send");
+        shout_send_button.onclick = async function () {
             let shoutbox_textarea = document.getElementById("shoutbox-textarea");
-            if(shoutbox_textarea.value.length==0){
+            if (shoutbox_textarea.value.length == 0) {
                 //TODO show error here
                 return;
             }
             const token = localStorage.getItem("token");
-            const response = await post_shout(token,shoutbox_textarea.value);
-            if(!("error" in response)){
-                shoutbox_textarea.value="";
+            let shoutbox_text = shoutbox_textarea.value.trim();
+            const response = await post_shout(token, shoutbox_text);
+            if (!("error" in response)) {
+                shoutbox_textarea.value = "";
             }
             console.log(response);
         }
 
-        var callback = function(shout){
-            console.log(callback);
+        var callback = function (shout) {
+
             let messages = document.getElementById("shoutbox-messages");
+            let scrollArea = document.getElementById("shoutbox-scroll");
+            const should_scroll_bottom =
+                scrollArea.scrollTop + scrollArea.clientHeight >=
+                scrollArea.scrollHeight - 1;
             let html = generate_shout_html(shout);
-            messages.innerHTML +=html;
-            
+            messages.innerHTML += html;
+            if (should_scroll_bottom) {
+                scrollArea.scrollTop = scrollArea.scrollHeight;
+            }
+
         };
+
         subscribe_shouts(callback);
-        
+
 
     </script>
 
@@ -131,7 +199,7 @@
                 <a href='/gallery'>
                     gallery
                 </a>
-                <a href='/playground'>
+                <a href='/fun'>
                     toys + games
                 </a>
                 <a href='/about'>
@@ -139,41 +207,66 @@
                 </a>
 
             </div>
-            <button class="login-button"style="">login</button>
             <div class="page-content">
-                    {% block content %} {% endblock content %}
+                {% block content %} {% endblock content %}
             </div>
-            
+
         </div>
 
         <div class="side-col">
             <div class="boxed">
                 <b>shoutbox</b>
                 <div class="shoutbox-container">
-                    <div class="shoutbox-messages">
+                    <div id="shoutbox-scroll" class="shoutbox-messages">
                         <ul id="shoutbox-messages">
-                       </ul>
+                        </ul>
                     </div>
-                        <div class="login-button">
-                            <button>login</button>
-                        </div>
+                    <div class="login-button">
+                        <button>login</button>
+                    </div>
                     <div id="shoutbox-ui" class="shoutbox-ui">
                         <textarea id="shoutbox-textarea" class="shoutbox-input"></textarea>
-                        <button id="shoutbox-send"class="shoutbox-send">send</button>
+                        <button id="shoutbox-send" class="shoutbox-send">send</button>
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
     </main>
 
+    <div id="confirmation-modal" class="modal">
+        <div class="confirmation-modal-content" style="border-radius:0.3in;line-height:1.2;">
+            <button id="confirmation-modal-close-button" class="modal-close">&times;</button>
+            <div id="confirmation-message" style="text-align:center">Hi</div>
+        </div>
+    </div>
+    <div id="token-login-modal" class="modal">
+        <div class="token-login-modal-content" style="border-radius:0.3in;line-height:1.2;">
+            <button id="token-login-modal-close-button" class="modal-close">&times;</button>
+            <div style="text-align:center">
+                <b id="token-login-name"></b>
+            </div>
+            <p id="token-login-message" style="text-align:center">that username is already registered. If you would like
+                to login please enter the token that was given to you when you registered</p>
+            <div style="display:flex;justify-content:center">
+                <input id="token-login-token" type="text" placeholder="enter the token here"></input>
+                <button id="token-login-button">login</button>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div id="login-modal" class="modal">
-        <div style="margin-top:14%;background-color:rgba(0,0,0,0.9); text-align:center">(this is a login screen. enter your username in the DISPLAY NAME box)</div>
-        <div class="login-modal-content" style="border-radius:0.3in;line-height:1.2;font-family:'Times New Roman'">
+        <div class="login-messages" id="login-messages">this is a login screen. enter your username in the DISPLAY NAME
+            box. you should stay signed in as long as you don't clear your browser cookies or use a private browser
+            window.</div>
+        <div class="login-modal-content" style="">
             <button id="modal-close-button" class="modal-close">&times;</button>
             <div style="text-align:center;line-height:1;">
-            
+
                 <b style="font-size:24px;margin:0;padding:0;">REPUBLICO DE COLOMBIA</b>
                 <div style="font-size:20px;margin:0;padding:0;">IDENTIFICACION DE MASCOTAS</div>
                 <div style="font-size:16px;margin:0;padding:0;">CEDULA DE CIUDADANIA</div>
@@ -182,7 +275,8 @@
             <div style="display:flex;flex-direction:row;justify-content:space-between;">
                 <div>
                     <div style="font-size:20px;margin:0;padding:0;">NOMBRE</div>
-                    <input id = "display-name-input" style="color:black;background: rgba(255, 255, 255, 0.1);"type="text" placeholder="DISPLAY NAME" name="displayname" required>
+                    <input id="display-name-input" style="color:black;background: rgba(255, 255, 255, 0.1);" type="text"
+                        placeholder="DISPLAY NAME" name="displayname" required>
                     <div style="font-size:20px;margin:0;padding:0;"><br>RAZA</div>
                     <b style="font-size:20px;margin:0;padding:0;">CRIOLLO</b>
                     <div style="font-size:20px;margin:0;padding:0;"><br>SEXO</div>
