--- a/templates/about.html
+++ b/templates/about.html
@@ -4,8 +4,15 @@
 
 <h2>{{ section.title }}</h2>
 
-this page isn't done yet either.
+i like programming<br>
+and i like video games<br>
+and i like cooking<br>
+and i like distance running<br>
+and i like powerlifting<br>
+<p></p>
+yeah this page isn't done yet either.
 <br>
 come back a little later
+
 
 {% endblock content %}
