--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,6 +244,7 @@ main .shoutbox-messages {
 
 main .shoutbox-message {
     display: flex;
+    overflow-wrap: break-word;
     border-bottom: 2px dotted #888;
     text-align: left;
     line-height: 1.3;
