initial work for display name color changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,13 @@
             </div>
         </div>
     </div>
+    <div id="color-change-popup" class="color-change-popup">
+        <div style="font-size:16px;">Change your name color if you please :)<div>
+        <div>
+            <input type="color"></input>
+            <button>Ok!</button>
+        </div>
+    </div>
 </body>
 
 </html>
