--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,6 +227,10 @@ main .shoutbox-username {
     color: whitesmoke;
 }
 
+main .shoutbox-username-editable {
+    cursor: pointer;
+}
+
 
 
 main .shoutbox-messages {
@@ -244,7 +248,7 @@ main .shoutbox-messages {
 
 main .shoutbox-message {
     display: flex;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     border-bottom: 2px dotted #888;
     text-align: left;
     line-height: 1.3;
@@ -274,6 +278,18 @@ main .shoutbox-ui {
     display: none;
     height: 10%;
     flex-direction: row;
+}
+
+.color-change-popup {
+    display: none;
+    position: absolute;
+    border-radius: 0.1in;
+    justify-content: center;
+    background-repeat: repeat;
+    background-image: url("/images/ourple.png");
+    padding: 0.15in;
+    background-size: 15px;
+    border: 2px solid #888;
 }
 
 
